# FastMRI-Image-Construction

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_endpoint.py
configs/: config.yaml  datamodule.yaml  model.yaml  trainer.yaml  triton.yaml
deploy/jobs/: workloads.sh
deploy/services/: serve_model.sh
deploy/services/triton/: Dockerfile.triton  docker-compose.triton.yml  start_triton.sh
monitoring/: monitor_metrics.py  prometheus.triton.yml  prometheus.yml
monitoring/grafana/dashboards/: triton-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: convert_to_onnx.py  evaluate.py  predict.py  predict_triton.py  serve.py  train.py  tune.py
src/: config.py  data.py  model.py  utils.py
tests/code/: conftest.py  test_train.py
tests/data/: conftest.py  test_data.py
triton_models/my_model/: config.pbtxt
triton_models/unet_model/: config.pbtxt
