[project]
name = "fastmri-knee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "httpx>=0.27.0",
    "psutil>=5.9.8",
    "mlflow>=3.4.0",
    "omegaconf>=2.3.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.9",
    "numpy>=2.3.3",
    "h5py>=3.14.0",
    "pytorch-lightning>=2.5.5",
    "optuna>=4.5.0",
    "torch>=2.8.0",
    "hydra-core>=1.3.2",
    "fastmri>=0.3.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
