[project]
name = "fastmri-knee"
version = "0.1.0"
description = "MRI reconstruction with FastMRI and PyTorch"
readme = "README.md"
requires-python = "==3.10.*"

# Core dependencies
dependencies = [
    "segmentation-models-pytorch==0.3.3",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "httpx>=0.27.0",
    "psutil>=5.9.8",
    "omegaconf>=2.3.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.9",
    "h5py>=3.14.0",
    "hydra-core>=1.3.2",
    "mlflow==2.12.1",
    "fastmri>=0.3.0",
    "onnx>=1.19.0",
    "onnxruntime==1.17.3",
    "onnxscript>=0.5.3",
]

[tool.uv.dependency-groups]
dev = [
    "torchsummary>=1.5.1",
    "torchinfo>=1.8.0",
    "optuna==3.6.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ipython>=8.0.0",
]

cpu = [
    "torch==2.3.1",
    "onnxruntime==1.17.3",
]

gpu = [
    "torch==2.3.1+cu124",
    "onnxruntime-gpu==1.17.3",
]


prod = [
    "gunicorn>=21.2.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

# USAGE: 
# uv sync --extra dev --extra cpu
# uv lock --extra cpu --output requirements-cpu.lock
